# RoboCorea

./: .gitignore  OPERATIONS.md  diagnose.sh  jetson.sh  laptop.sh  run_robot_manager.sh  script.py
reference/: architecture.md  (+1 more)
software/ros2_ws/src/arm_description/: CMakeLists.txt
software/ros2_ws/src/dicerox_mapping/: CMakeLists.txt
software/ros2_ws/src/esp32_bridge/: README.md  package.xml  setup.py
software/ros2_ws/src/esp32_bridge/esp32_bridge/: diagnostics.py  main_bridge.py  protocol.py
software/ros2_ws/src/esp32_bridge/launch/: esp32_bridge.launch.py
software/ros2_ws/src/esp32_bridge/test/: test_protocol.py
software/ros2_ws/src/gui/: CMakeLists.txt  README.md  package.xml
software/ros2_ws/src/gui/include/gui/: app_settings.hpp  dashboard_panel.hpp  filter_registry.hpp  gst_mic_sender.hpp  mag_plot.hpp  main_window.hpp  map_thumb.hpp  map_window.hpp  maps_panel.hpp  odometry_panel.hpp  perception_panel.hpp  ppm_calib_dialog.hpp  routine_programmer.hpp  settings_dialog.hpp  source_manager.hpp  speech_processor.hpp  systems_window.hpp  urdf_viewer.hpp  video_panel.hpp  video_widget.hpp
software/ros2_ws/src/gui/scripts/: c920_srt_stream.sh  jetson_speaker_sink.sh
software/ros2_ws/src/gui/src/: app_settings.cpp  camera_hub.cpp  dashboard_panel.cpp  filters.cpp  gst_mic_sender.cpp  mag_plot.cpp  main_window.cpp  map_window.cpp  maps_panel.cpp  odometry_panel.cpp  perception_panel.cpp  ppm_calib_dialog.cpp  routine_programmer.cpp  settings_dialog.cpp  source_manager.cpp  speech_processor.cpp  systems_window.cpp  urdf_viewer.cpp  video_panel.cpp  video_widget.cpp
software/ros2_ws/src/mlx90640_msgs/: CMakeLists.txt  package.xml
software/ros2_ws/src/mlx90640_msgs/msg/: ThermalStatus.msg
software/ros2_ws/src/mlx90640_ros2/: README.md  package.xml  setup.cfg  setup.py
software/ros2_ws/src/mlx90640_ros2/config/: mlx90640.yaml
software/ros2_ws/src/mlx90640_ros2/launch/: driver.launch.py  mlx90640.launch.py  visualizer.launch.py
software/ros2_ws/src/mlx90640_ros2/mlx90640_ros2/: common.py  mlx90640_node.py  thermal_visualizer_node.py
software/ros2_ws/src/mlx90640_ros2/test/: test_thermal_pipeline.py
software/ros2_ws/src/rescue_bringup/: package.xml  setup.cfg  setup.py
software/ros2_ws/src/rescue_bringup/rescue_bringup/: camera_streamer.py  map_manager.py  robot_manager.py
software/ros2_ws/src/rescue_bringup/scripts/: run_robot_manager.sh
software/ros2_ws/src/rescue_bringup/systemd/: README.md  c920-stream.service  camera-streamer.service  esp32-bridge.service  jetson-sensors.service  jetson-speaker.service  lidar.service  map-manager.service  rescue-localization.service  rescue-mapping.service  rescue-mapping3d.service  rescue-navigation.service  rescue-sensors.target  robot-manager.service  zed.service
software/ros2_ws/src/rescue_interfaces/: CMakeLists.txt
software/ros2_ws/src/rescue_interfaces/srv/: DeleteMap.srv  ListMaps.srv  LoadMap.srv  SaveMap.srv
software/ros2_ws/src/rescue_mapping3d/: CMakeLists.txt  package.xml
software/ros2_ws/src/rescue_mapping3d/config/: octomap.yaml
software/ros2_ws/src/rescue_mapping3d/launch/: mapping3d.launch.py
software/ros2_ws/src/rescue_mapping3d/src/: octomap_node.cpp
software/ros2_ws/src/rescue_nav/: README.md  package.xml  setup.py
software/ros2_ws/src/rescue_nav/config/: nav2_real_params.yaml
software/ros2_ws/src/rescue_nav/docs/: COMPETITION_WORKFLOWS.md
software/ros2_ws/src/rescue_nav/launch/: mapping_ekf.launch.py  nav2.launch.py  odom_fusion.launch.py  real_mapping.launch.py  real_navigation.launch.py  save_competition_map.launch.py  sensor_frontend.launch.py
software/ros2_ws/src/rescue_nav/rescue_nav/: nav_preflight.py
software/sim_ws/src/dicerox_arm_urdf/: package.xml  setup.cfg  setup.py
software/sim_ws/src/dicerox_arm_urdf/dicerox_arm_urdf/: SpaceExplorerRead.py  spacenavigator_hidapi.py
software/sim_ws/src/dicerox_arm_urdf/launch/: launch.py
software/sim_ws/src/dicerox_arm_urdf/meshes/collision/: Link1.STL  Link2.STL  Link3.STL
software/sim_ws/src/dicerox_arm_urdf/meshes/visual/: Link4.STL  Link5.STL
software/sim_ws/src/dicerox_arm_urdf/rviz/: default.rviz
software/sim_ws/src/dicerox_arm_urdf/urdf/: Dicerox_robot_arm_URDF.xacro
software/sim_ws/src/dicerox_urdf_v1/: CMakeLists.txt  package.xml
software/sim_ws/src/dicerox_urdf_v1/launch/: display.launch.py
software/sim_ws/src/dicerox_urdf_v1/meshes/collision/: Flipper3L.STL
software/sim_ws/src/dicerox_urdf_v1/meshes/visual/: Flipper1L.STL  Flipper2L.STL  Flipper4L.STL
software/sim_ws/src/dicerox_urdf_v1/rviz/: default.rviz
software/sim_ws/src/dicerox_urdf_v1/urdf/: Dicerox_URDFv1.xacro
software/sim_ws/src/tracked_robot_bringup/: CMakeLists.txt  package.xml
software/sim_ws/src/tracked_robot_bringup/launch/: stage_a_demo.launch.py
software/sim_ws/src/tracked_robot_description/: CMakeLists.txt  package.xml
software/sim_ws/src/tracked_robot_description/urdf/: dicerox_stage_a.urdf.xacro
software/sim_ws/src/tracked_robot_gz/: CMakeLists.txt  package.xml
software/sim_ws/src/tracked_robot_gz/config/: bridge.yaml
software/sim_ws/src/tracked_robot_gz/launch/: spawn.launch.py  world.launch.py
software/sim_ws/src/tracked_robot_gz/models/robocup2026_boxes/: model.config  model.sdf
software/sim_ws/src/tracked_robot_gz/models/robocup2026_world/: model.config  model.sdf
software/sim_ws/src/tracked_robot_gz/worlds/: robocup2026_boxes.sdf  robocup2026_debug.sdf  robocup2026_stage.sdf  stage_a.sdf
software/sim_ws/src/tracked_robot_nav2/: CMakeLists.txt  package.xml
software/sim_ws/src/tracked_robot_nav2/config/: nav2_params.yaml
software/sim_ws/src/tracked_robot_nav2/launch/: nav2.launch.py
software/sim_ws/src/tracked_robot_nav2/maps/: generate_map.py  stage_a.pgm  stage_a.yaml
software/sim_ws/src/tracked_robot_nav2/rviz/: stage_a.rviz
software/sim_ws/src/tracked_robot_odom/: package.xml  setup.cfg  setup.py
software/sim_ws/src/tracked_robot_odom/launch/: odom.launch.py
software/sim_ws/src/tracked_robot_odom/tracked_robot_odom/: scan_sanitizer_node.py  tracked_odom_node.py
(+27 files in other folders)
