<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gui</name>
  <version>0.1.0</version>
  <description>
    RoboCorea operator console (Qt6 + ROS 2). Live video (local RF driving cams +
    C920 SRT streams from the Jetson + thermal), digital twin, dashboard and
    odometry. Runs on the workstation.
  </description>
  <maintainer email="nabetse069@gmail.com">RoboCorea</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rescue_interfaces</depend>
  <depend>urdf</depend>

  <!-- Qt6 (Widgets + OpenGL), OpenCV, Assimp, ONNX Runtime and ZBar are resolved
       by CMake find_package, not rosdep keys. OpenCV MUST be built with GStreamer
       support for the SRT video path; ONNX Runtime is installed under /usr/local
       (see README). -->

  <!-- Workstation bring-up (launch/bringup.launch.py) orchestrates the whole
       operator stack: robot_state_publisher + the arm_teleop servo/flipper_state
       (+ arm_description URDF), optionally joystick teleop and RViz. -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>arm_teleop</exec_depend>
  <exec_depend>arm_description</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
