<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tracked_robot_description</name>
  <version>0.1.0</version>
  <description>
    Robot description (URDF/xacro) for the Dicerox tracked rescue robot.
    Stage A: planar tracked base surrogate with LiDAR, ready for Nav2.
    Stage A references Dicerox chassis and arm meshes from the ros2_moveit_ws packages.
  </description>
  <maintainer email="gerardodelcid16@gmail.com">Gerardo Escobar</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>dicerox_urdf_v1</depend>
  <depend>dicerox_arm_urdf</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
